@@ -1,3 +1,10 @@
+2008-07-11  Pavel Roskin  <proski@gnu.org>
+
+	* term/i386/pc/serial.c (GRUB_SERIAL_PORT_NUM): New constant.
+	[!GRUB_MACHINE_PCBIOS] (serial_hw_io_addr): Add COM2 and COM3.
+	(serial_hw_get_port): Check validity of the port number.
+	(grub_cmd_serial): Check return value of serial_hw_get_port().
+
 2008-07-07  Pavel Roskin  <proski@gnu.org>
 
 	* boot/i386/pc/diskboot.S (notification_string): Replace
